--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,23 @@
 * {
+    box-sizing: border-box;
     background-color: blanchedalmond;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Bebas Neue', sans-serif;
+    height: 100vh;
+    margin: 0;
+}
+
+header {
+    font-size: 25px;
+    color: #2b3336;
+}
+
+h2 {
+    font-size: 15px;
+    color: black;
 }
