--- a/css/main.css
+++ b/css/main.css
@@ -40,11 +40,16 @@ h2 {
 }
 
 #board > div.avail {
-    cursor: grab;
+    cursor: pointer;
+    background-color: blanchedalmond;
 }
 
 #board > div.avail:hover {
     background-color: #8360a9;
+}
+
+#board > div.avail:active {
+    background-color: #76c698;
 }
 
 button {
@@ -55,7 +60,7 @@ button {
     padding: 5px;
     border: 5px;
     margin-top: 50px;
-    cursor: grab;
+    cursor: pointer;
 }
 
 button:disabled {
